[package]
name = "zone"
version = "0.3.1"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
repository = "https://github.com/oxidecomputer/zone"
description = "Rust bindings for Zone management"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
itertools = "0.12"
zone_cfg_derive = { version = "0.3.0", path = "../zone_cfg_derive" }
tokio = { version = "1.35", features = [ "process" ], optional = true }

[features]
default = ["sync"]
sync = []
async = ["dep:tokio"]
