[package]
name = "zone_cfg_derive"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
repository = "https://github.com/oxidecomputer/zone"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = [ "parsing", "printing", "extra-traits" ]
