[package]
name = "zone_cfg_derive"
version = "0.3.1"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
repository = "https://github.com/oxidecomputer/zone"
description = "Rust bindings for Zone management (proc macro generation helper)"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = [ "parsing", "printing", "extra-traits" ]
